# feedbot

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml
fetcher/: package-lock.json  package.json  server.mjs  test.mjs
scripts/: verify.py
server/: Cargo.toml
server/src/: api.rs  crawl.rs  db.rs  epub.rs  export.rs  fetcher.rs  images.rs  main.rs  mobi.rs  ncx.rs  urlx.rs
web/: index.html  package-lock.json  package.json  vite.config.js
web/scripts/: check-legacy.mjs
web/src/: App.vue  api.js  format.js  main.js  styles.css  theme.js
web/src/components/: Lock.vue  Masthead.vue
web/src/views/: Inbox.vue  Reader.vue  Sites.vue
