[package]
name = "feedbot"
version = "0.1.0"
edition = "2024"

[dependencies]
ammonia = "4.1.3"
anyhow = "1.0.103"
axum = "0.8.9"
chrono = "0.4.45"
epub-builder = "0.8.3"
form_urlencoded = "1.2.2"
r2d2 = "0.8.10"
r2d2_sqlite = "0.35.0"
regex = "1.13.0"
reqwest = { version = "0.13.4", default-features = false, features = ["json"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["fs", "trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
